added the new logo

--- a/content/_includes/themes/apache/_navigation.html
+++ b/content/_includes/themes/apache/_navigation.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="{{site.baseurl }}">
-              <!-- <img src="/assets/themes/apache/img/logo.png" width="50"> -->
+		  <img src="/assets/themes/apache/img/logo.png"  height ="30" alt = "logo">
               {{ site.data.project.name }}
           </a>
         </div>
