--- a/content/_includes/themes/apache/footer.html
+++ b/content/_includes/themes/apache/footer.html
@@ -13,13 +13,13 @@
             <div style="text-align:center;">
                 {% if site.data.project.podling %}
                 <div style="margin-top: 20px; margin-bottom: 20px;">
-                    <a href="http://incubator.apache.org"><img src="/assets/themes/apache/img/egg-logo.png"
+                    <a href="https://incubator.apache.org"><img src="/assets/themes/apache/img/egg-logo.png"
                                                                alt="Apache Incubator"/></a>
                 </div>
                 {% endif %}
                 <div>
-                    Copyright &copy; 2019 <a href="http://www.apache.org">The Apache Software Foundation</a>.
-                    Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version
+                    Copyright &copy; {{ site.time | date: '%Y' }} <a href="https://www.apache.org">The Apache Software Foundation</a>.
+                    Licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version
                     2.0</a>.
                     <br>
                     {% if site.data.project.podling %}
